@@ -5,6 +5,8 @@ Version 2.7.1
 -------------
 (bugfix release)
 
+- Fixed a bug with ``call_filter`` not working properly on environment
+  and context filters.
 
 Version 2.7
 -----------
